feat: added reccurence for tasks
